[gd_scene load_steps=19 format=3 uid="uid://bpccl1tt3p3ht"]

[ext_resource type="Script" uid="uid://bsla750o1yogo" path="res://scripts/patch.gd" id="1_l8jle"]
[ext_resource type="Texture2D" uid="uid://2pfu2rbmme2t" path="res://assets/sprites/patch.png" id="2_l8jle"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jtui0"]
atlas = ExtResource("2_l8jle")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_evc3m"]
atlas = ExtResource("2_l8jle")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5q2h"]
atlas = ExtResource("2_l8jle")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxieg"]
atlas = ExtResource("2_l8jle")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnumo"]
atlas = ExtResource("2_l8jle")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mobs"]
atlas = ExtResource("2_l8jle")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f13b"]
atlas = ExtResource("2_l8jle")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0onmb"]
atlas = ExtResource("2_l8jle")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1gc1"]
atlas = ExtResource("2_l8jle")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvo8a"]
atlas = ExtResource("2_l8jle")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0hmd"]
atlas = ExtResource("2_l8jle")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsqnr"]
atlas = ExtResource("2_l8jle")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rsqnr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtui0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evc3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5q2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxieg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnumo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mobs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f13b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0onmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1gc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvo8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0hmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsqnr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32d86"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvfq8"]
size = Vector2(10, 10)

[sub_resource type="Environment" id="Environment_l8jle"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[node name="Patch" type="CharacterBody2D"]
modulate = Color(2, 2, 2, 1)
collision_layer = 2
script = ExtResource("1_l8jle")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rsqnr")
autoplay = "default"
frame_progress = 0.525417

[node name="Area2D" type="Area2D" parent="."]

[node name="GrabBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_32d86")
debug_color = Color(0.188741, 0.642136, 9.62615e-07, 0.42)

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wvfq8")

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l8jle")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="NextLevelTimer" to="." method="_on_next_level_timer_timeout"]
